--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -475,5 +475,6 @@ section {
         }
         
         &.github:before {@extend %icon-github;}
+        &.twitter:before {@extend %icon-twitter;}
     }
 }
