--- a/css/source/main.scss
+++ b/css/source/main.scss
@@ -6,7 +6,9 @@
 $max-width: 1200px;
 
 // color scheme
+$darkgray: #51566c;
 $gray: #676d86;
+$lightgray: #9498a8;
 $red: #b71a49;
 $blue: #00638d;
 $orange: #f39100;
