--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -1,4 +1,4 @@
-// navigation bar
+/* NAVIGATION BAR */
 
 #nav {
     position: fixed; top: 0; right: 0; z-index: 9001;
@@ -69,7 +69,7 @@
                 @include transition(.2s cubic-bezier(.45, -0.47, .86, 1));
                 
                 @include ON_REDUCED_MOTION {
-                    @include transition-property(none !important);
+                    @include transition-property(none);
                 }
                 
                 // white background behind nav mobile button
@@ -126,7 +126,7 @@
                 }
             }
             
-            &.show {
+            .mobile-nav-open & {
                 right: 0;
                 @include transition(0s);
                 
@@ -136,14 +136,9 @@
                 
                 .content {
                     @include transform(translate(0,0));
-                    @include transition(.2s);
                 }
             }
         }
-    }
-
-    br {
-        display: none;
     }
 
     a {
@@ -200,6 +195,14 @@
             
             @include ON_DESKTOP {
                 display: none;
+            }
+    
+            // blur logo if mobile nav is open
+            .mobile-nav-open & {
+                
+                @include ON_MOBILE {
+                    @include filter(blur(3px));
+                }
             }
             
             i {
@@ -310,7 +313,7 @@
         }
     }
     
-    &.nav-visible {
+    .mobile-nav-open & {
         
         b {
             @include transform(rotateY(180deg));
@@ -349,6 +352,7 @@
 
 
 
+/* SWITCH LANGUAGE BUTTON */
 
 #language-btn {
     display: inline-block; position: relative; float: right; z-index: 9997;
@@ -450,6 +454,7 @@
 
 
 
+/* FOOTER TO-TOP BUTTON */
 
 #to-top {
     position: relative;
